services_k8s_test/landingpage/backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yaml -f ../../../myscicatlive/services/backend/compose.yaml -f ../../../myscicatlive/services/mongodb/compose.yaml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  containers:
    - args:
        - node
        - dist/main
      command:
        - loop_entrypoints.sh
        - docker-entrypoint.sh
      image: ghcr.io/scicatproject/backend-next:v4.6.4
      livenessProbe:
        exec:
          command:
            - wget --spider -Y off 'http://127.0.0.1:3000/api/v3/health'
        failureThreshold: 5
        initialDelaySeconds: 5
        periodSeconds: 30
        timeoutSeconds: 10
      name: backend
      volumeMounts:
        - mountPath: /home/node/app/functionalAccounts.json
          name: backend-cm0
          subPath: functionalAccounts.json
        - mountPath: /usr/local/bin/loop_entrypoints.sh
          name: backend-claim1
        - mountPath: /docker-entrypoints/0.sh
          name: backend-cm2
          subPath: 0.sh
  restartPolicy: OnFailure
  volumes:
    - configMap:
        items:
          - key: functionalAccounts.json
            path: functionalAccounts.json
        name: backend-cm0
      name: backend-cm0
    - name: backend-claim1
      persistentVolumeClaim:
        claimName: backend-claim1
    - configMap:
        items:
          - key: db_migration.sh
            path: 0.sh
        name: backend-cm2
      name: backend-cm2
